--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,11 @@
-#RewriteEngine on
+RewriteEngine on
 #Rewritebase //
 #Rewritebase /
 RewriteCond $1 !^(index\.php|publicshare|user_guide|assets|resources|Resources|dataimport|robots\.txt)
 RewriteRule ^(.*)$ index.php/$1 [L]
 
+RewriteEngine on
+#Rewritebase //
+Rewritebase /
+RewriteCond $1 !^(index\.php|publicshare|user_guide|assets|resources|Resources|dataimport|robots\.txt)
+RewriteRule ^(.*)$ index.php/$1 [L]
